chnage somthing and resolve the spacing issues

--- a/MyCustomCss/About.css
+++ b/MyCustomCss/About.css
@@ -6,7 +6,7 @@
 
 .container233 img {
     width: 100%;
-    height: 85vh;
+    height: 92vh;
     top: 5rem !important;
     /* margin-top: 5rem; */
 }
@@ -1168,7 +1168,7 @@ a:hover {
     height: 90vh;
     width: auto;
     bottom: 0 !important;
-    margin-top: -4% !important;
+    margin-top: -7%!important;
     /* padding: 10px; */
 }
 
