--- a/css/Header.css
+++ b/css/Header.css
@@ -45,16 +45,16 @@
     .float {
         position: fixed;
         width: 60px;
-        height: 60px;
+        height: 60px;   
         bottom: 68px;
         right: 23px;
         cursor: pointer;
         /* background-color:#25d366; */
         color: #FFF;
-        border-radius: 50px;
+        /* border-radius: 50px; */
         text-align: center;
         font-size: 30px;
-        box-shadow: 2px 2px 3px #999;
+        /* box-shadow: 2px 2px 3px #999; */
         z-index: 100;
     }
 
